dart/lib/src/generated/frb_generated.io.dart


// ignore_for_file: camel_case_types, non_constant_identifier_names, avoid_positional_boolean_parameters, annotate_overrides, constant_identifier_names
// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint

/// generated by flutter_rust_bridge
class joinstrWire implements BaseWire {
  factory joinstrWire.fromExternalLibrary(ExternalLibrary lib) =>
      joinstrWire(lib.ffiDynamicLibrary);

  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  joinstrWire(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  joinstrWire.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  void store_dart_post_cobject(
    DartPostCObjectFnType ptr,
  ) {
    return _store_dart_post_cobject(
      ptr,
    );
  }

  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
          'store_dart_post_cobject');
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  void wire__crate__api__joinstr__initiate_coinjoin(
    int port_,
    ffi.Pointer<wire_cst_ffi_pool_config> config,
    ffi.Pointer<wire_cst_ffi_peer_config> peer,
  ) {
    return _wire__crate__api__joinstr__initiate_coinjoin(
      port_,
      config,
      peer,
    );
  }

  late final _wire__crate__api__joinstr__initiate_coinjoinPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64,
                  ffi.Pointer<wire_cst_ffi_pool_config>,
                  ffi.Pointer<wire_cst_ffi_peer_config>)>>(
      'frbgen_joinstr_flutter_wire__crate__api__joinstr__initiate_coinjoin');
  late final _wire__crate__api__joinstr__initiate_coinjoin =
      _wire__crate__api__joinstr__initiate_coinjoinPtr.asFunction<
          void Function(int, ffi.Pointer<wire_cst_ffi_pool_config>,
              ffi.Pointer<wire_cst_ffi_peer_config>)>();

  void wire__crate__api__joinstr__join_coinjoin(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> pool_raw_json,
    ffi.Pointer<wire_cst_ffi_peer_config> peer,
  ) {
    return _wire__crate__api__joinstr__join_coinjoin(
      port_,
      pool_raw_json,
      peer,
    );
  }

  late final _wire__crate__api__joinstr__join_coinjoinPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64,
                  ffi.Pointer<wire_cst_list_prim_u_8_strict>,
                  ffi.Pointer<wire_cst_ffi_peer_config>)>>(
      'frbgen_joinstr_flutter_wire__crate__api__joinstr__join_coinjoin');
  late final _wire__crate__api__joinstr__join_coinjoin =
      _wire__crate__api__joinstr__join_coinjoinPtr.asFunction<
          void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_ffi_peer_config>)>();

  void wire__crate__api__joinstr__list_coins(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> mnemonic,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> electrum_address,
    int electrum_port,
    int range_start,
    int range_end,
    int network,
  ) {
    return _wire__crate__api__joinstr__list_coins(
      port_,
      mnemonic,
      electrum_address,
      electrum_port,
      range_start,
      range_end,
      network,
    );
  }

  late final _wire__crate__api__joinstr__list_coinsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Int64,
                  ffi.Pointer<wire_cst_list_prim_u_8_strict>,
                  ffi.Pointer<wire_cst_list_prim_u_8_strict>,
                  ffi.Uint16,
                  ffi.Uint32,
                  ffi.Uint32,
                  ffi.Int32)>>(
      'frbgen_joinstr_flutter_wire__crate__api__joinstr__list_coins');
  late final _wire__crate__api__joinstr__list_coins =
      _wire__crate__api__joinstr__list_coinsPtr.asFunction<
          void Function(
              int,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              ffi.Pointer<wire_cst_list_prim_u_8_strict>,
              int,
              int,
              int,
              int)>();

  void wire__crate__api__joinstr__list_pools(
    int port_,
    int back,
    int timeout,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> relay,
  ) {
    return _wire__crate__api__joinstr__list_pools(
      port_,
      back,
      timeout,
      relay,
    );
  }

  late final _wire__crate__api__joinstr__list_poolsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Int64, ffi.Uint64, ffi.Uint64,
                  ffi.Pointer<wire_cst_list_prim_u_8_strict>)>>(
      'frbgen_joinstr_flutter_wire__crate__api__joinstr__list_pools');
  late final _wire__crate__api__joinstr__list_pools =
      _wire__crate__api__joinstr__list_poolsPtr.asFunction<
          void Function(
              int, int, int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)>();

  ffi.Pointer<wire_cst_ffi_peer_config> cst_new_box_autoadd_ffi_peer_config() {
    return _cst_new_box_autoadd_ffi_peer_config();
  }

  late final _cst_new_box_autoadd_ffi_peer_configPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_cst_ffi_peer_config> Function()>>(
      'frbgen_joinstr_flutter_cst_new_box_autoadd_ffi_peer_config');
  late final _cst_new_box_autoadd_ffi_peer_config =
      _cst_new_box_autoadd_ffi_peer_configPtr
          .asFunction<ffi.Pointer<wire_cst_ffi_peer_config> Function()>();

  ffi.Pointer<wire_cst_ffi_pool_config> cst_new_box_autoadd_ffi_pool_config() {
    return _cst_new_box_autoadd_ffi_pool_config();
  }

  late final _cst_new_box_autoadd_ffi_pool_configPtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<wire_cst_ffi_pool_config> Function()>>(
      'frbgen_joinstr_flutter_cst_new_box_autoadd_ffi_pool_config');
  late final _cst_new_box_autoadd_ffi_pool_config =
      _cst_new_box_autoadd_ffi_pool_configPtr
          .asFunction<ffi.Pointer<wire_cst_ffi_pool_config> Function()>();

  ffi.Pointer<ffi.Uint32> cst_new_box_autoadd_u_32(
    int value,
  ) {
    return _cst_new_box_autoadd_u_32(
      value,
    );
  }

  late final _cst_new_box_autoadd_u_32Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint32> Function(ffi.Uint32)>>(
          'frbgen_joinstr_flutter_cst_new_box_autoadd_u_32');
  late final _cst_new_box_autoadd_u_32 = _cst_new_box_autoadd_u_32Ptr
      .asFunction<ffi.Pointer<ffi.Uint32> Function(int)>();

  ffi.Pointer<wire_cst_list_ffi_coin> cst_new_list_ffi_coin(
    int len,
  ) {
    return _cst_new_list_ffi_coin(
      len,
    );
  }

  late final _cst_new_list_ffi_coinPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_ffi_coin> Function(
              ffi.Int32)>>('frbgen_joinstr_flutter_cst_new_list_ffi_coin');
  late final _cst_new_list_ffi_coin = _cst_new_list_ffi_coinPtr
      .asFunction<ffi.Pointer<wire_cst_list_ffi_coin> Function(int)>();

  ffi.Pointer<wire_cst_list_ffi_pool> cst_new_list_ffi_pool(
    int len,
  ) {
    return _cst_new_list_ffi_pool(
      len,
    );
  }

  late final _cst_new_list_ffi_poolPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<wire_cst_list_ffi_pool> Function(
              ffi.Int32)>>('frbgen_joinstr_flutter_cst_new_list_ffi_pool');
  late final _cst_new_list_ffi_pool = _cst_new_list_ffi_poolPtr
      .asFunction<ffi.Pointer<wire_cst_list_ffi_pool> Function(int)>();

  ffi.Pointer<wire_cst_list_prim_u_8_strict> cst_new_list_prim_u_8_strict(
    int len,
  ) {
    return _cst_new_list_prim_u_8_strict(
      len,
    );
  }

  late final _cst_new_list_prim_u_8_strictPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(ffi.Int32)>>(
      'frbgen_joinstr_flutter_cst_new_list_prim_u_8_strict');
  late final _cst_new_list_prim_u_8_strict = _cst_new_list_prim_u_8_strictPtr
      .asFunction<ffi.Pointer<wire_cst_list_prim_u_8_strict> Function(int)>();

  int dummy_method_to_enforce_bundling() {
    return _dummy_method_to_enforce_bundling();
  }

  late final _dummy_method_to_enforce_bundlingPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
          'dummy_method_to_enforce_bundling');
  late final _dummy_method_to_enforce_bundling =
      _dummy_method_to_enforce_bundlingPtr.asFunction<int Function()>();
}

typedef DartPort = ffi.Int64;
typedef DartDartPort = int;
typedef DartPostCObjectFnTypeFunction = ffi.Bool Function(
    DartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartDartPostCObjectFnTypeFunction = bool Function(
    DartDartPort port_id, ffi.Pointer<ffi.Void> message);
typedef DartPostCObjectFnType
    = ffi.Pointer<ffi.NativeFunction<DartPostCObjectFnTypeFunction>>;

final class wire_cst_ffi_pool_config extends ffi.Struct {
  @ffi.Double()
  external double denomination_btc;

  @ffi.Uint32()
  external int fee;

  @ffi.Uint64()
  external int max_duration;

  @ffi.Uint32()
  external int peers;

  @ffi.Int32()
  external int network;
}

final class wire_cst_list_prim_u_8_strict extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_ffi_coin extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> txid;

  @ffi.Uint32()
  external int vout;

  @ffi.Uint64()
  external int value_sat;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> script_pubkey;

  @ffi.Uint32()
  external int sequence;

  @ffi.Uint32()
  external int coin_path_depth;

  external ffi.Pointer<ffi.Uint32> coin_path_index;
}

final class wire_cst_ffi_peer_config extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> mnemonic;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> electrum_address;

  @ffi.Uint16()
  external int electrum_port;

  external wire_cst_ffi_coin input;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> output_address;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> relay;

  @ffi.Int32()
  external int network;
}

final class wire_cst_list_ffi_coin extends ffi.Struct {
  external ffi.Pointer<wire_cst_ffi_coin> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_ffi_pool extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> id;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> raw_json;

  @ffi.Int32()
  external int network;

  @ffi.Uint64()
  external int denomination_sat;

  @ffi.Uint32()
  external int peers;

  @ffi.Uint64()
  external int timeout;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> relay;

  @ffi.Uint32()
  external int fee_rate;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> public_key;

  external ffi.Pointer<wire_cst_list_prim_u_8_strict> version;
}

final class wire_cst_list_ffi_pool extends ffi.Struct {
  external ffi.Pointer<wire_cst_ffi_pool> ptr;

  @ffi.Int32()
  external int len;
}

final class wire_cst_joinstr_error extends ffi.Struct {
  external ffi.Pointer<wire_cst_list_prim_u_8_strict> message;
}
